conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: value update is not a member of Boolean
if (estFaceMur()=true) {
    ^